packages/docs/src/content/docs/v1.0.0-rc1/index.mdx
---
title: StAX-XML - High-Performance JavaScript XML Parser Library
description: Fast, streaming XML parser for JavaScript/TypeScript. Works in Node.js, Bun, Deno, and browsers, with WebAssembly recommended for browser performance paths.
template: splash
head:
  - tag: meta
    attrs:
      property: og:image
      content: https://clickin.github.io/stax-xml/og/index.png
  - tag: meta
    attrs:
      property: og:image:width
      content: "1200"
  - tag: meta
    attrs:
      property: og:image:height
      content: "630"
  - tag: meta
    attrs:
      name: twitter:image
      content: https://clickin.github.io/stax-xml/og/index.png
hero:
  tagline: High-Performance Streaming XML Parser for JavaScript & TypeScript - Native and Wasm Performance Paths
  actions:
    - text: Quick Start Guide
      link: /stax-xml/guide/getting-started/
      icon: right-arrow
      variant: primary
    - text: View on GitHub
      link: https://github.com/Clickin/stax-xml
      icon: external
slug: v1.0.0-rc1
---

import { Card, CardGrid } from '@astrojs/starlight/components';

## Why Choose StAX-XML for JavaScript XML Parsing?

<CardGrid>
  <Card title="🚀 High-Performance XML Processing" icon="rocket">
    Benchmarked XML parser optimized for speed and memory efficiency. Outperforms traditional DOM parsers for large XML files. [See Performance Benchmarks](/stax-xml/resources/benchmarks/)
  </Card>
  <Card title="🔄 Streaming XML Parser" icon="down-arrow">
    Memory-efficient stream-based parsing approach. Process XML files of any size without loading entire document into memory. [Learn Streaming API](/stax-xml/api-guides/staxxml-parser/)
  </Card>
  <Card title="🌐 Browser and Runtime Compatibility" icon="puzzle">
    Works in Node.js, Bun, Deno, and modern browsers. Use the WebAssembly runtime for browser throughput when available; keep pure JavaScript as the compatibility fallback. [Installation Guide](/stax-xml/guide/getting-started/)
  </Card>
  <Card title="📝 TypeScript-First XML Parser" icon="document">
    Built with TypeScript, providing comprehensive type definitions and IntelliSense support. Full type safety for XML parsing operations. [TypeScript Examples](/stax-xml/guide/examples/)
  </Card>
</CardGrid>

## JavaScript XML Parser Installation

Choose your preferred package manager to install StAX-XML:

```bash
# npm - Most popular package manager
npm install stax-xml

# yarn - Fast, reliable package manager
yarn add stax-xml

# pnpm - Efficient disk space usage
pnpm add stax-xml

# bun - Ultra-fast JavaScript runtime
bun add stax-xml

# deno - Secure TypeScript runtime
deno add npm:stax-xml
```

**ESM-only package:** StAX-XML is published as ESM-only. Use `import { ... } from 'stax-xml'`; `require('stax-xml')` is not supported.

**Platform Requirements:**
- Node.js 20.19+
- Modern browsers (ES2020+; WebAssembly recommended for performance-sensitive parsing)
- TypeScript 4.5+ (optional)

[→ Complete Installation Guide](/stax-xml/guide/getting-started/)

## XML Parser Quick Start Example

Get started with StAX-XML in seconds. Here's how to parse XML with streaming support:

```typescript
import { StaxXmlParser, XmlEventType } from 'stax-xml';

// XML content to parse
const xmlContent = '<bookstore><book id="1"><title>JavaScript Guide</title></book></bookstore>';

// Create ReadableStream for streaming XML parsing
const stream = new ReadableStream({
  start(controller) {
    controller.enqueue(new TextEncoder().encode(xmlContent));
    controller.close();
  }
});

// Parse XML asynchronously with event-driven approach
async function parseXml() {
  const parser = new StaxXmlParser(stream);
  for await (const event of parser) {
    if (event.type === XmlEventType.START_ELEMENT) {
      console.log(`Found element: ${event.name}`);
    }
  }
}
parseXml();
```

[→ More Advanced Examples](/stax-xml/guide/examples/) | [→ API Documentation](/stax-xml/api/)

## StAX-XML vs Other JavaScript XML Parsers

Unlike traditional XML-to-JSON mappers, StAX-XML provides pull-based parsing that gives you complete control over XML processing:

### Key Advantages:

- **🔥 Memory Efficient**: Stream large XML files without loading them entirely into memory
- **⚡ High Performance**: Faster than DOM-based parsers for large XML documents
- **🎯 Flexible Mapping**: Transform XML to any custom data structure, not just JSON
- **🌍 Runtime Support**: Works in Node.js, Bun, Deno, and modern browsers, with Wasm recommended for browser performance paths
- **📘 TypeScript Ready**: Complete type definitions for enhanced developer experience
- **🔧 Namespace Aware**: Proper XML namespace handling and entity decoding

### Popular Use Cases:
- **Large XML File Processing**: RSS feeds, XML data exports, configuration files
- **Real-time XML Streaming**: Live data feeds, server-sent events
- **Memory-Constrained Environments**: Edge computing, serverless functions
- **Custom XML Transformations**: Data migration, format conversion

[→ Performance Benchmarks](/stax-xml/resources/benchmarks/) | [→ Frequently Asked Questions](/stax-xml/resources/faq/)
